--- a/index.html
+++ b/index.html
@@ -9,4 +9,53 @@
     Sports are an excellent and fun way to get <b>exercise, have fun, make friends, learn about competition,
     and how to work with others</b>.Sports should be fun and always played with the best of sportsmanship in mind. 
    </p>
+   <hr>
+   <h3>Cloud computing</h3>
+   <ol>
+       <li>History</li>
+       <ol>
+           <li>Early history</li>
+           <li>2000s</li>
+           <li>2010s</li>
+       </ol>
+       <li>Similar concepts</li>
+       <li>Characteristics</li>
+       <li>Service models</li>
+       <ol>
+           <li>Infrastructure as a service (IaaS)</li>
+           <li>Platform as a service (PaaS)</li>
+           <li>Software as a service (SaaS)</li>
+           <li>Mobile "backend" as a service (MBaaS)</li>
+           <li>Serverless computing</li>
+           <li>Function as a service (FaaS)</li>
+       </ol>
+       <li>Similar concepts</li>
+       <li>Characteristics</li>
+       <li>Service models</li>
+   </ol>
+   <hr>
+   <ul>
+       <li>Deployment models</li>
+       <ul>
+           <li>Private cloud</li>
+           <li>Public cloud</li>
+           <li>Hybrid cloud</li>
+           <li>Community cloud</li>
+           <li>Distributed cloud</li>
+           <li>Multi cloud</li>
+           <li>Poly cloud</li>
+           <li>Big Data cloud</li>
+           <li>HPC cloud</li>  
+       </ul>
+       <li>Architecture</li>
+       <ul>
+           <li>Cloud engineering</li>
+       </ul>
+       <li>Security and privacy</li>
+       <li>Limitations and disadvantages</li>
+       <li>Emerging trends</li>
+       <li> Digital forensics in the cloud</li>
+   </ul>
+</body>
 </html>
+
