--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
        <li>Emerging trends</li>
        <li> Digital forensics in the cloud</li>
    </ul>
+
+   <h2><a href="aboutme.html">About me</a></h2>
+   
 </body>
 </html>
 
