--- a/index.html
+++ b/index.html
@@ -58,7 +58,47 @@
    </ul>
 
    <h2><a href="aboutme.html">About me</a></h2>
-   
+
+   <br>
+   <hr>
+   <h2>Interesting places to visit</h2>
+    <p>India is the largest Country in the South Asia region. Tirupati is known as the abode of the Hindu god Venkateshvara, Lord of Seven Hills. New Delhi is the capital of India.Goa is famous for beaches.Kolkata it is called the city of joy.</p>
+    <table>
+        <tr>
+            <th>Location</th>
+            <th>Number Of Hours</th>
+            <th>Amount Of Money</th>
+        </tr>
+        <tr>
+            <td>Tirupati</td>
+            <td>Ten</td>
+            <td>&#36; 200</td>
+        </tr>
+        <tr>
+            <td>New delhi</td>
+            <td>six</td>
+            <td>&#36; 350</td>
+        </tr>
+        <tr>
+            <td>Goa</td>
+            <td>Seven</td>
+            <td>&#36; 400</td>
+        </tr>
+        <tr>
+            <td>Kolkata</td>
+            <td>Eight</td>
+            <td>&#36; 300</td>
+        </tr>
+    </table>
+
+    <style>
+        table,
+        th,
+        td {
+            border: 1px solid black;
+        }
+    </style>
+
 </body>
 </html>
 
