--- a/index.html
+++ b/index.html
@@ -98,6 +98,34 @@
             border: 1px solid black;
         }
     </style>
+    <hr>
+    <h2><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python Programming Language</a></h2>
+    <blockquote cite="https://en.wikipedia.org/wiki/Python_(programming_language)">Python is an easy to learn, powerful programming language. It has efficient high-level data structures and a simple but effective approach to object-oriented programming. </blockquote>
+    <pre>
+        # Python program to find the factorial of a number provided by the user.
+
+# change the value for a different result
+num = 7
+
+# To take input from the user
+#num = int(input("Enter a number: "))
+
+factorial = 1
+
+# check if the number is negative, positive or zero
+if num < 0:
+   print("Sorry, factorial does not exist for negative numbers")
+elif num == 0:
+   print("The factorial of 0 is 1")
+else:
+   for i in range(1,num + 1):
+       factorial = factorial*i
+   print("The factorial of",num,"is",factorial)
+
+   Output : The factorial of 7 is 5040...!
+    </pre>
+    <h4><a href="https://www.programiz.com/python-programming/examples/factorial">Source Code</a></h4>
+
 
 </body>
 </html>
