Added Bonus page to index
Enemies for Wonder women details and Animal

--- a/index.html
+++ b/index.html
@@ -1,67 +1,70 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Nellore</title>
+    <title>Nellore</title>
 </head>
+
 <body>
-   <h3>Sports</h3>
-   <p>
-    Sports are an excellent and fun way to get <b>exercise, have fun, make friends, learn about competition,
-    and how to work with others</b>.Sports should be fun and always played with the best of sportsmanship in mind. 
-   </p>
-   <hr>
-   <h3>Cloud computing</h3>
-   <ol>
-       <li>History</li>
-       <ol>
-           <li>Early history</li>
-           <li>2000s</li>
-           <li>2010s</li>
-       </ol>
-       <li>Similar concepts</li>
-       <li>Characteristics</li>
-       <li>Service models</li>
-       <ol>
-           <li>Infrastructure as a service (IaaS)</li>
-           <li>Platform as a service (PaaS)</li>
-           <li>Software as a service (SaaS)</li>
-           <li>Mobile "backend" as a service (MBaaS)</li>
-           <li>Serverless computing</li>
-           <li>Function as a service (FaaS)</li>
-       </ol>
-       <li>Similar concepts</li>
-       <li>Characteristics</li>
-       <li>Service models</li>
-   </ol>
-   <hr>
-   <ul>
-       <li>Deployment models</li>
-       <ul>
-           <li>Private cloud</li>
-           <li>Public cloud</li>
-           <li>Hybrid cloud</li>
-           <li>Community cloud</li>
-           <li>Distributed cloud</li>
-           <li>Multi cloud</li>
-           <li>Poly cloud</li>
-           <li>Big Data cloud</li>
-           <li>HPC cloud</li>  
-       </ul>
-       <li>Architecture</li>
-       <ul>
-           <li>Cloud engineering</li>
-       </ul>
-       <li>Security and privacy</li>
-       <li>Limitations and disadvantages</li>
-       <li>Emerging trends</li>
-       <li> Digital forensics in the cloud</li>
-   </ul>
+    <h2><a href="bonus.html">BONUS</a></h2>
+    <h3>Sports</h3>
+    <p>
+        Sports are an excellent and fun way to get <b>exercise, have fun, make friends, learn about competition,
+            and how to work with others</b>.Sports should be fun and always played with the best of sportsmanship in mind.
+    </p>
+    <hr>
+    <h3>Cloud computing</h3>
+    <ol>
+        <li>History</li>
+        <ol>
+            <li>Early history</li>
+            <li>2000s</li>
+            <li>2010s</li>
+        </ol>
+        <li>Similar concepts</li>
+        <li>Characteristics</li>
+        <li>Service models</li>
+        <ol>
+            <li>Infrastructure as a service (IaaS)</li>
+            <li>Platform as a service (PaaS)</li>
+            <li>Software as a service (SaaS)</li>
+            <li>Mobile "backend" as a service (MBaaS)</li>
+            <li>Serverless computing</li>
+            <li>Function as a service (FaaS)</li>
+        </ol>
+        <li>Similar concepts</li>
+        <li>Characteristics</li>
+        <li>Service models</li>
+    </ol>
+    <hr>
+    <ul>
+        <li>Deployment models</li>
+        <ul>
+            <li>Private cloud</li>
+            <li>Public cloud</li>
+            <li>Hybrid cloud</li>
+            <li>Community cloud</li>
+            <li>Distributed cloud</li>
+            <li>Multi cloud</li>
+            <li>Poly cloud</li>
+            <li>Big Data cloud</li>
+            <li>HPC cloud</li>
+        </ul>
+        <li>Architecture</li>
+        <ul>
+            <li>Cloud engineering</li>
+        </ul>
+        <li>Security and privacy</li>
+        <li>Limitations and disadvantages</li>
+        <li>Emerging trends</li>
+        <li> Digital forensics in the cloud</li>
+    </ul>
 
-   <h2><a href="aboutme.html">About me</a></h2>
+    <h2><a href="aboutme.html">About me</a></h2>
 
-   <br>
-   <hr>
-   <h2>Interesting places to visit</h2>
+    <br>
+    <hr>
+    <h2>Interesting places to visit</h2>
     <p>India is the largest Country in the South Asia region. Tirupati is known as the abode of the Hindu god Venkateshvara, Lord of Seven Hills. New Delhi is the capital of India.Goa is famous for beaches.Kolkata it is called the city of joy.</p>
     <table>
         <tr>
@@ -100,14 +103,14 @@
     </style>
     <hr>
     <h2><a href="https://en.wikipedia.org/wiki/Kotlin_(programming_language)">
-        Kotlin (programming language)</a></h2>
+            Kotlin (programming language)</a></h2>
     <blockquote cite="https://en.wikipedia.org/wiki/Kotlin_(programming_language)">
         Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference. Kotlin is designed to interoperate fully with Java, and the JVM version of Kotlin's standard library depends on the Java Class Library, but type inference allows its syntax to be more concise. </blockquote>
     <pre>
         import java.time.LocalDateTime
 import java.time.format.DateTimeFormatter
 
-fun main(args: Array<String>) {
+fun main(args: ArrayString) {
 
     val current = LocalDateTime.now()
 
@@ -123,5 +126,5 @@ fun main(args: Array<String>) {
 
 
 </body>
-</html>
 
+</html>
